--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -29,8 +29,8 @@ The primary goal of the MicroBooNE experiment is to study and investigate the lo
 
 \subsection{Cross sections}
 MicroBooNE's neutrino cross-section program will be the first $\nu-Ar$ cross-section in the 1 GeV energy range and one of only a few cross-section measurements of $\nu-Ar$ in the world. MicroBooNE is also the first liquid argon detector to collect the highest statistics sample of neutrino interactions. Investigating final-state-interactions in the 1GeV energy range provides information about short range nuclear correlations that affect the interpretations of neutrino oscillation experiment data. 
-\subsection{Astroparticle physics}
-$99\%$ of energy leaving a supernova leaves in the form of neutrinos which can be seen by detectors on earth's surface. MicroBooNE will have a dedicated supernova data stream and a connection to the SuperNova Early Warning System \cite{snews} so when a nearby supernova explosion occurs, continuous data will be written for several hours that can be later analyzed for supernova neutrino events. This information coupled with information from other experiments can be used to better understand supernovae.\textcolor{red}{\textbf{add infograph of supernova here}}
+%\subsection{Astroparticle physics}
+%$99\%$ of energy leaving a supernova leaves in the form of neutrinos which can be seen by detectors on earth's surface. MicroBooNE will have a dedicated supernova data stream and a connection to the SuperNova Early Warning System \cite{snews} so when a nearby supernova explosion occurs, continuous data will be written for several hours that can be later analyzed for supernova neutrino events. This information coupled with information from other experiments can be used to better understand supernovae.\textcolor{red}{\textbf{add infograph of supernova here}}
 \subsection{Liquid argon detector development}
 The last physics goal for the MicroBooNE collaboration is to provide important information regarding LArTPC technology. Being the first in large scare LArTPCs in the US, MicroBooNE will be albe to provide improvements to High Voltage (HV) distribution, Noise Characterization \cite{noise}, and Michel Electron Reconstruction \cite{michel}. 
 
