--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -29,6 +29,9 @@ The primary goal of the MicroBooNE experiment is to study and investigate the lo
 
 \subsection{Cross sections}
 MicroBooNE's neutrino cross-section program will be the first $\nu-Ar$ cross-section in the 1 GeV energy range and one of only a few cross-section measurements of $\nu-Ar$ in the world. MicroBooNE is also the first liquid argon detector to collect the highest statistics sample of neutrino interactions. Investigating final-state-interactions in the 1GeV energy range provides information about short range nuclear correlations that affect the interpretations of neutrino oscillation experiment data. 
+
+One of the cross-section measurements MicroBooNE can make is an inclusive charged-current cross-section measurement (referred to as CC-inclusive). CC-inclusive events consist of a neutrino exchanging a $W^{\pm}$ boson with an argon atom, producing a charged lepton and any number of other final state particles. In MicroBooNE's case, a CC-inclusive event will mostly have a defining muon track coming out of the vertex due to our neutrinos being predominately $\nu_{\mu}$s. A cross-section measurement is the energy dependent probability of $\nu-Ar$ interaction in the detector. Cross-sections however are independent of the intensity or focus of the particle beam so they can be compared among different experiments. A background for a CC-inclusive cross-section measurement are the neutral-current events that contain a pion. It is possible to have a neutral current interaction with a $\pi+p$ event signature that looks like a charged current $\mu+p$ event. Reconstruction tools implemented to date don't efficiently separate muons from pions. A common way to separate these two particles species is to implement a track length cut. On average, muons tend to have longer track lengths in LArTPCs so by requiring that the hypothesized lepton be above a threshold track length, it is possible to increase signal to background.
+
 %\subsection{Astroparticle physics}
 %$99\%$ of energy leaving a supernova leaves in the form of neutrinos which can be seen by detectors on earth's surface. MicroBooNE will have a dedicated supernova data stream and a connection to the SuperNova Early Warning System \cite{snews} so when a nearby supernova explosion occurs, continuous data will be written for several hours that can be later analyzed for supernova neutrino events. This information coupled with information from other experiments can be used to better understand supernovae.\textcolor{red}{\textbf{add infograph of supernova here}}
 \subsection{Liquid argon detector development}
@@ -65,5 +68,6 @@ Further down the beamline is a concrete collimator which absorbs particles not n
 \caption{Energy spectrum of the Booster Neutrino Beam at Fermi National Laboratories}
 \label{fig:bnbflux}
 \end{figure}
+
 
 \section{Event Reconstruction}
